[gd_scene load_steps=2 format=3 uid="uid://dga1ual85j14i"]

[ext_resource type="Script" uid="uid://cdu0wa26xbjf1" path="res://move_controller.gd" id="1_gtffx"]

[node name="MoveController" type="Node"]
script = ExtResource("1_gtffx")

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationTimer" type="Timer" parent="."]
one_shot = true
